--- a/config.env
+++ b/config.env
@@ -1,5 +1,6 @@
 PORT = 3300;
-DB = mongodb://127.0.0.1:27017/userAuthentication
+# DB = mongodb://127.0.0.1:27017/userAuthentication
+DB = mongodb+srv://admin:admin@cluster0.oksowxm.mongodb.net/?retryWrites=true&w=majority
 NODE_ENV=development
 JWT_SECRET_KEY = this_is_top_secret
 JWT_EXPIRE = 30d
